--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,8 @@
 
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
 
 .ln-icon-btn {
 	height: 44px;
